--- a/.github/workflows/actions-clear.yml
+++ b/.github/workflows/actions-clear.yml
@@ -26,10 +26,18 @@ jobs:
         pip install requests
 
     # 运行清理脚本
-    - name: Run cleanup script
+    - name: cleanup  UserScripts
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # 将 GITHUB_TOKEN 传递到脚本环境变量
         REPO_OWNER: ${{ github.repository_owner }}  # 仓库所有者
         REPO_NAME: ${{ github.event.repository.name }}  # 仓库名称
+      run: |
+        python pythonscr/cleanup_actions.py
+
+    - name: cleanup  UserScriptsHistory
+      env:
+        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}  # 将 GITHUB_TOKEN 传递到脚本环境变量
+        REPO_OWNER: ${{ github.repository_owner }}  # 仓库所有者
+        REPO_NAME: 'UserScriptsHistory'
       run: |
         python pythonscr/cleanup_actions.py
