--- a/.github/workflows-bak/update-translate-script-md.yml
+++ b/.github/workflows-bak/update-translate-script-md.yml
@@ -2,7 +2,7 @@ name: translate-script-readme
 ##最后触发更新整个所有脚本的其他语言文档.
 on:
     workflow_run:
-        workflows: ["translate-repo-md"] # 指定 A 流程的名称
+        workflows: ["merge-change-history"] # 指定 A 流程的名称
         types:
             - completed # 在 A 流程完成后触发
     workflow_dispatch:
@@ -45,12 +45,16 @@ jobs:
             - name: 提交和推送更改
               run: |
                   # 配置 Git 用户
-                  git config --global user.name 'github-actions[bot]'
-                  git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+                  gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
+                  git config --global user.name 'qinwuyuan-sync-bot'
+                  git config --global user.email "${{ secrets.GPG_PRIVATE_EMAIL }}"
+                  git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
+
+                  git pull
 
                   # 添加更改
                   git add .
-                  git commit -m "脚本[README{_xx}.md]翻译" \
+                  git commit -S -m "脚本[README{_xx}.md]翻译" \
                               -m "GoogleTranslate→[Script details/**/README{_xx}.md]↓" \
                               -m "[Script details/**/README{_xx}.md]" \
                   || echo "没有更改"
