--- a/.github/workflows/auto-close-issue.yml
+++ b/.github/workflows/auto-close-issue.yml
@@ -4,38 +4,36 @@ on:
     push:
         paths:
             - "Script details/**/*.js" #新的脚本被提交或者被修改了.
-    workflow_dispatch:    # 你可以指定其他分支
+    workflow_dispatch:
 
 jobs:
-  close_issue:
-    runs-on: ubuntu-latest
+    close_issue:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Check out the code
-        uses: actions/checkout@v3
+        steps:
+            - name: Check out the code
+              uses: actions/checkout@v4
 
-      - name: Extract commit messages
-        run: |
-          # 提取最近一次提交的提交信息
-          git log -1 --pretty=format:"%s" > commit_message.txt
-        id: extract_commit
+            - name: Extract commit messages
+              run: |
+                  # 提取最近一次提交的提交信息
+                  git log -1 --pretty=format:"%s" > commit_message.txt
+              id: extract_commit
 
-      - name: Find issue references in commit message
-        id: find_issues
-        run: |
-          # 使用正则表达式找到提交信息中的 #issue 号
-          issues=$(grep -oE '#[0-9]+' commit_message.txt | sed 's/#//g')
-          echo "Found issues: $issues"
-          echo "issues=$issues" >> $GITHUB_ENV
+            - name: Find issue references in commit message
+              id: find_issues
+              run: |
+                  # 使用正则表达式找到提交信息中的 #issue 号
+                  issues=$(grep -oE '#[0-9]+' commit_message.txt | sed 's/#//g')
+                  echo "Found issues: $issues"
+                  echo "issues=$issues" >> $GITHUB_ENV
 
-      - name: Close and comment on issues
-        if: ${{ env.issues != '' }}
-        run: |
-          for issue in $issues; do
-            echo "Closing and commenting on issue #$issue"
-            # 使用 GitHub CLI 来关闭 Issue 并添加评论
-            gh issue comment $issue -b "This issue is being closed by commit: ${{ github.sha }}. Commit message: $(cat commit_message.txt)"
-            gh issue close $issue
-          done
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+            - name: Close and comment on issues
+              if: ${{ env.issues != '' }}
+              run: |
+                  for issue in $issues; do
+                    echo "Closing and commenting on issue #$issue"
+                    # 使用 GitHub CLI 来关闭 Issue 并添加评论
+                    gh issue comment $issue -b "This issue is being closed by commit: ${{ github.sha }}. Commit message: $(cat commit_message.txt)"
+                    gh issue close $issue
+                  done
