--- a/.github/workflows/update-translate-script-md.yml
+++ b/.github/workflows/update-translate-script-md.yml
@@ -2,9 +2,9 @@ name: translate-script-readme
 ##最后触发更新整个所有脚本的其他语言文档.
 on:
     workflow_run:
-        workflows: ["merge-change-history"] # 指定 A 流程的名称
+        workflows: ["merge-change-history"]
         types:
-            - completed # 在 A 流程完成后触发
+            - completed
     workflow_dispatch:
 
 jobs:
@@ -12,52 +12,24 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: 检出代码
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-                  token: ${{ secrets.MY_GITHUB_TOKEN }} # 使用你创建的 Token
-
-            - name: 设置 Python 环境
-              uses: actions/setup-python@v2
-              with:
-                  python-version: "3.x"
-
-            - name: 安装依赖
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install googletrans==4.0.0-rc1  # 安装 Google Translate API 的 Python 包
-
-            - name: 获取当前分支
-              id: get_branch
-              run: |
-                  echo "当前分支: $(git rev-parse --abbrev-ref HEAD)"
-                  echo "branch=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
-
-            - name: 拉取最新更改
-              run: |
-                  git pull origin ${{ env.branch }}  # 拉取最新的远程更改
 
             - name: 读取并翻译 README
               run: |
                   python pythonscr/translate-chinese-to-filelang/main.py
-              continue-on-error: true # 让这个步骤即使出错也不会终止整个工作流
 
             - name: 提交和推送更改
               run: |
-                  # 配置 Git 用户
                   gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
                   git config --global user.name 'qinwuyuan-sync-bot'
                   git config --global user.email "${{ secrets.GPG_PRIVATE_EMAIL }}"
                   git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
-
                   git pull
-
-                  # 添加更改
                   git add .
                   git commit -S -m "脚本[README{_xx}.md]翻译" \
                               -m "GoogleTranslate→[Script details/**/README{_xx}.md]↓" \
                               -m "[Script details/**/README{_xx}.md]" \
                   || echo "没有更改"
-                  git push origin ${{ env.branch }}
-              env:
-                  GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }} # 传递 Token 到 Git 环境变量中
+                  git push
