--- a/.github/workflows/actions-clear.yml
+++ b/.github/workflows/actions-clear.yml
@@ -5,6 +5,9 @@ on:
     schedule:
         - cron: "0 0 * * 0" # 每周日00:00执行
 
+permissions:
+    workflows: write
+
 jobs:
     cleanup:
         runs-on: ubuntu-latest
@@ -19,7 +22,7 @@ jobs:
 
             - name: cleanup  UserScripts
               env:
-                  GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   REPO_OWNER: ${{ github.repository_owner }}
                   REPO_NAME: ${{ github.event.repository.name }}
               run: |
@@ -27,7 +30,7 @@ jobs:
 
             - name: cleanup  UserScriptsHistory
               env:
-                  GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   REPO_OWNER: ${{ github.repository_owner }}
                   REPO_NAME: "UserScriptsHistory"
               run: |
