--- a/.github/workflows/update-chinagodman-commit.yml
+++ b/.github/workflows/update-chinagodman-commit.yml
@@ -15,7 +15,7 @@ jobs:
         runs-on: ubuntu-latest
         env:
             GIT_AUTHOR_NAME: ${{ github.event.commits[0].author.name }}
-            GIT_AUTHOR_EMAIL: toniaiwanowskiskr47@gmail.com
+            GIT_AUTHOR_EMAIL: ${{ github.event.commits[0].author.email  }}
             GIT_COMMITTER_NAME: qinwuyuan-sync-bot
             GIT_COMMITTER_EMAIL: "${{ secrets.GPG_PRIVATE_EMAIL }}"
 
