--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -43,6 +43,6 @@ jobs:
                   git config --global commit.gpgSign true
                   # 添加文件并提交
                   git add docs/README.md
-                  git commit -S -m "update contributors→[docs/README.md]"
+                  git commit -S -m "update contributors→\`[docs/README.md]\`"
                   # 推送更改
                   git push
