--- a/.github/workflows/update-translate-script-md.yml
+++ b/.github/workflows/update-translate-script-md.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
     translate-script-readme:
+        if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success') }}
         runs-on: ubuntu-latest
         steps:
             - name: 检出代码
