--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,4 @@ updates:
   - package-ecosystem: "github-actions"  # 指定依赖类型为 GitHub Actions
     directory: "/.github/workflows"      # 指定 GitHub Actions 工作流文件所在的目录
     schedule:
-      interval: "weekly"                 # 检查频率，您可以选择 daily, weekly, 或 monthly
+      interval: "monthly"                 # 检查频率，您可以选择 daily, weekly, 或 monthly
