--- a/.github/workflows/update-chinagodman-commit.yml
+++ b/.github/workflows/update-chinagodman-commit.yml
@@ -48,10 +48,9 @@ jobs:
             - name: 提交和推送更改
               if: ${{ env.git_username != 'qinwuyuan-sync-bot' }}
               run: |
-                  # 添加更改
-                  git pull
                   gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
-                  git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"  # 配置 GPG 密钥
+                  git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"  
+                  git pull
                   git add .
                   git commit  -S -m "$ESCAPED_MSG" || echo "没有需要提交的更改"
                   git push
