--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -14,7 +14,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Generate Contributors Images
-              uses: jaywcjlove/github-action-contributors@2.0.3
+              uses: jaywcjlove/github-action-contributors@main
               id: contributors
               with:
                   filter-author: (action-assistant\[bot\]|renovate\[bot\]|renovate-bot|@github-actions-bot|dependabot\[bot\]|ImgBotApp|imgbot\[bot\])
