--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -38,5 +38,5 @@ jobs:
                   git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
                   git config --global commit.gpgSign true
                   git add docs/README.md
-                  git commit -S -m "更新[\`docs/README.md\`]内贡献者列表" || echo "没有需要提交的更改"
+                  git commit -n -S -m "更新[\`docs/README.md\`]内贡献者列表" || echo "没有需要提交的更改"
                   git push
