--- a/.github/workflows/update-translate-repo-md.yml
+++ b/.github/workflows/update-translate-repo-md.yml
@@ -29,5 +29,5 @@ jobs:
                   git config --global user.signingkey "${{ secrets.GPG_PRIVATE_ID }}"
                   git pull
                   git add .
-                  git commit -S -m "Repo:谷歌翻译[\`docs/README.md\`]→[\`docs/{vi,ko,en,jp,zh-TW}/README.md\`]" || echo "没有需要提交的更改"
+                  git commit -n -S -m "Repo:谷歌翻译[\`docs/README.md\`]→[\`docs/{vi,ko,en,jp,zh-TW}/README.md\`]" || echo "没有需要提交的更改"
                   git push
