--- a/.github/workflows/actions-clear.yml
+++ b/.github/workflows/actions-clear.yml
@@ -1,36 +1,36 @@
 name: Cleanup Actions Runs
 
 on:
-    workflow_dispatch:
-    schedule:
-        - cron: "0 0 * * 0" # 每周日00:00执行
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * 0" # 每周日00:00执行
 
 jobs:
-    cleanup:
-        runs-on: ubuntu-latest
+  cleanup:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-              with:
-                sparse-checkout: 'pythonscr/cleanup_actions.py'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: "pythonscr/cleanup_actions.py"
 
-            - name: Install dependencies
-              run: |
-                  pip install requests
+      - name: Install dependencies
+        run: |
+          pip install requests
 
-            - name: cleanup  UserScripts
-              env:
-                  GITHUB_TOKEN: ${{ secrets.DELETE_ACTIONS_RUNS }}
-                  REPO_OWNER: ${{ github.repository_owner }}
-                  REPO_NAME: ${{ github.event.repository.name }}
-              run: |
-                  python pythonscr/cleanup_actions.py
+      - name: cleanup  UserScripts
+        env:
+          GITHUB_TOKEN: ${{ secrets.DELETE_ACTIONS_RUNS }}
+          REPO_OWNER: ${{ github.repository_owner }}
+          REPO_NAME: ${{ github.event.repository.name }}
+        run: |
+          python pythonscr/cleanup_actions.py
 
-            - name: cleanup  UserScriptsHistory
-              env:
-                  GITHUB_TOKEN: ${{ secrets.DELETE_ACTIONS_RUNS }}
-                  REPO_OWNER: ${{ github.repository_owner }}
-                  REPO_NAME: "UserScriptsHistory"
-              run: |
-                  python pythonscr/cleanup_actions.py
+      - name: cleanup  UserScriptsHistory
+        env:
+          GITHUB_TOKEN: ${{ secrets.DELETE_ACTIONS_RUNS }}
+          REPO_OWNER: ${{ github.repository_owner }}
+          REPO_NAME: "UserScriptsHistory"
+        run: |
+          python pythonscr/cleanup_actions.py
