--- a/.github/workflows/eslint-on-push-pr.yml
+++ b/.github/workflows/eslint-on-push-pr.yml
@@ -6,14 +6,13 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout repository code
         uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
 
       - name: Install dependencies
         run: npm ci # instead of install to ensure consistency and determinism in CI/CD workflow
